# simple_tenant

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  redis_client.py  settings.py
core/: excel.py  file.py  img_converter.py  logging_config.py  mail.py  pdf_generator.py  postreq.py  responses.py  security.py  utils.py
core/mail_templates/: reset-password.html
generated_services/: indo_deployment.yaml  indo_ingress.yaml  indo_service.yaml
kafka_service/: kafka_service.py
models/: __init__.py
repository/: auth.py  tenant.py  test_auth.py  test_tenant.py
routes/: auth.py  tenant.py
schemas/: auth.py  common.py  tenant.py
validator/: auth.py
